2048/2048-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata: 
  labels:
    app: "2048"
  name: "2048-deployment"
  namespace: 2048-game
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: "2048"
  template:
    metadata:
      labels:
        app: "2048"
    spec:
      containers:
        - image: alexwhen/docker-2048:latest
          imagePullPolicy: Always
          name: docker-2048
          ports:
          - containerPort: 80
