2048/2048-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: "2048-ingress"
  namespace: "2048-game"
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: 2048-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: "service-2048"
                port:
                  number: 80
